--- a/SonidoBestial/app/src/main/res/layout/activity_pup_sonido_bestial.xml
+++ b/SonidoBestial/app/src/main/res/layout/activity_pup_sonido_bestial.xml
@@ -31,7 +31,7 @@
         android:layout_marginRight="88dp"
         android:layout_marginBottom="37dp"
         android:background="@drawable/subfondo_pop"
-        app:layout_constraintBottom_toTopOf="@+id/volver_btn"
+        app:layout_constraintBottom_toTopOf="@+id/volver_btn3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/videoView"
         app:layout_constraintTop_toBottomOf="@+id/imageView3">
@@ -83,6 +83,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintCircleRadius="40dp"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/reply_btn"
+        android:layout_width="228dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="317dp"
+        android:layout_marginLeft="317dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/rectangulo_boton_claro"
+        android:onClick="replySound"
+        android:text="Reproducir"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintCircleRadius="40dp"
+        app:layout_constraintEnd_toStartOf="@+id/volver_btn3"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <VideoView
         android:id="@+id/videoView"
